# Dog-Skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  baoyu-skills.skill  cc-dispatch.skill  dbskill.skill  exam-tutor.skill  humanizer-zh.skill  last30days-skill.skill  nuwa-skill.skill  temp_njumatch.html  vercel-labs-skills.skill
adversarial-review/: SKILL.md
algorithmic-art/: SKILL.md
animation-craft/: SKILL.md
apple-design/: SKILL.md
archify/: SKILL.md
architecture-diagram/: ATTRIBUTIONS.md  LICENSE  README.md  SKILL.md
article-poster/: SKILL.md
baokuan-title-generator/: SKILL.md
baoyu-skills/: SKILL.md
brand-workshop/: SKILL.md
canvas-design/: SKILL.md
cc-dispatch/: SKILL.md
claude-to-im-skill/: SKILL.md
code-review/: SKILL.md
code-review-skill/: SKILL.md
code-simplifier/: SKILL.md
codex-claude-pm/: SKILL.md
creator-buddy/: SKILL.md
dashi-ppt/: SKILL.md
dbskill/: SKILL.md
design-buddy/: SKILL.md
dog-frontier/: ATTRIBUTIONS.md  README.md  SKILL.md
dog-poster/: SKILL.md
dog-ppt/: SKILL.md
dog-tutor/: ATTRIBUTIONS.md  SKILL.md
evaluate-research-project/: SKILL.md
excalidraw-diagram/: SKILL.md
family-doctor/: SKILL.md
feynman-learning/: README.md  SKILL.md
first-principles/: SKILL.md
ghostwriter/: SKILL.md
handshake/: SKILL.md
html-video/: SKILL.md  generate-nane-videos.js
ppt/: README.md
wx2md/: README.md  SKILL.md  pyproject.toml  requirements.txt
wx2md/agents/: openai.yaml
wx2md/examples/: urls.txt
wx2md/references/: open-source-notes.md
wx2md/src/: main.py
wx2md/src/wx2md/: main.py
(+106 files in other folders)
